      NTP: Check that the entire extension field is in the capture even
        if it isn't printed
      MPTCP: parse MPC data_len field, print flags from MP_CAPABLE option.
      OSPF: Fix printing of Traffic Engineering Link TLVs to correctly
        advance the packet data pointer
      OSPF: Print more truncation indications
      OSPF: Add more length checks
    User interface:
      Add optional unit suffix on -C file size.
      Add --print-sampling to print every Nth packet instead of all.
      Add --lengths option to print the captured and original packet lengths.
    Source code:
      Use %zu when printing a sizeof to squelch compiler warnings
      Remove unused missing/snprintf.c.
      Remove unused missing/strdup.c.
      (FIXME: somebody please wrap the line below just before the release)
      AODV, AppleTalk, BOOTP, CHDLC, DCCP, EAP, EGP, EIGRP, ForCES, Geneve, GRE, ICMP, Juniper, L2TP, mobile, NetFlow, NFLOG, NTP, OLSR, pflog, PGM, RADIUS, RIP, RSVP, SCTP, SNMP, TCP, UDP, vsock: Modernize packet parsing style
      DCCP, EGP: Replace custom code with tok2str()
      UDP: Clean up address and port printing.
      AppleTalk: Declutter appletalk.h.
      IEEE 802.11: Simplify handle_action().
      Provide GET_ macros for 4-byte and 8-byte floating-point numbers
        and use them rather than custom code
      Disregard setlinebuf(3), always use setvbuf(3).
    Building and testing:
      autoconf: Update install-sh script to the latest available version.
      autoconf: Remove detection of early IPv6 stacks.
      Detect OS IPv6 support using AF_INET6 only.
      Remove all remaining support for BSD/OS, IRIX, {OSF/1, Digital Unix,
        Tru64 Unix}, SINIX and Ultrix.
      Fix compiling on GNU/Hurd.
      Make illumos build warning-free.
      Fix propagation of cc_werr_cflags() output.

DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
  Summary for 4.99.5 tcpdump release (so far!)
    Fix: